name:                blockchain-study
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blockchain-study#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BlockChain
  build-depends:       base >= 4.7 && < 5
                     , time
                     , aeson
  default-language:    Haskell2010

executable blockchain-study-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blockchain-study
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite blockchain-study-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blockchain-study
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/blockchain-study
